update dark moed

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ Easy medical terms">
         </p>
         <div class="search">
             <input type="text" id="search" placeholder="Enter medical term..." />
-            <button onclick="searchTerm()"><i style="
-            color: #fff; animation: move 1s ease infinite;" class="fa-solid fa-magnifying-glass"></i> </button>
+            <button onclick="searchTerm()"><i style="animation: move 1s ease infinite;" class="fa-solid fa-magnifying-glass"></i> </button>
+            <button id="dark-mode-toggle" title="Dark Mode Button"><i class="fa-solid fa-moon"></i></button>
         </div>
         
         <div id="results"></div>
@@ -67,5 +67,6 @@ Easy medical terms">
         </div>
     </div>
     <script src="assets/script.js"></script>
+    <script src="assets/darkmode.js"></script>
 </body>
 </html>
