--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@ Easy medical terms">
         </p>
         <div class="search">
             <input type="text" id="search" placeholder="Enter medical term..." />
-            <button onclick="searchTerm()"><i style="animation: move 1s ease infinite;" class="fa-solid fa-magnifying-glass"></i> </button>
+            <button id="search-btn" onclick="searchTerm()"><i style="animation: move 1s ease infinite;" class="fa-solid fa-magnifying-glass"></i> </button>
             <button id="dark-mode-toggle" title="Dark Mode Button"><i class="fa-solid fa-moon"></i></button>
         </div>
         
         <div id="results"></div>
-
+       
         <div class="create">
             <p>Created by <span>Leul Ayfokru </span>| &copy; 2025</p>
             <a href="http://instagram.com/ayfleu" target="_blank" rel="noopener noreferrer">
@@ -67,6 +67,6 @@ Easy medical terms">
         </div>
     </div>
     <script src="assets/script.js"></script>
-    <script src="assets/darkmode.js"></script>
+    <script src="assets/darkmode.js"></script> 
 </body>
 </html>
