--- a/contact.html
+++ b/contact.html
@@ -19,5 +19,22 @@
 
         <button type="submit">Send Message</button>
     </form>
+    <script>
+        document.getElementById("contactForm").addEventListener("submit", function(event) {
+            event.preventDefault(); // Prevent default form submission
+        
+            let formData = new FormData(this);
+        
+            fetch("send_email.php", {
+                method: "POST",
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                alert(data.message);
+            })
+            .catch(error => console.error("Error:", error));
+        });
+        </script> 
 </body>
 </html>
