--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Easy medical terms">
 <meta property="og:url" content="https://cure-dictionary.vercel.app">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="CureDictionary">
+
     
     <title>CureDictionary</title>
     <link rel="stylesheet" href="assets/style.css">
@@ -74,6 +75,8 @@ Easy medical terms">
 
     <script src="assets/script.js"></script>
     <script src="assets/darkmode.js"></script> 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1414628395010730"
+     crossorigin="anonymous"></script>
 
 </body>
 </html>
